The folders were rearranged and unnecessary files were removed

--- a/Second Pizza Project/pizza2.html
+++ b/Second Pizza Project/pizza2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Fourth Web Layout Project (Second Pizza Project)</title>
+  <title>Fourth Web Layout Project (Second Pizza Design Project)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="css/pizza2.css" />
 </head>
@@ -82,9 +82,60 @@
           <p>Beef burger with Sides</p>
           <div class="monicon">
             <p>$15</p>
-            <img src="images/plus_circle.svg" alt="plus icon">
+            <img src="images/pluss.svg" alt="plus icon">
           </div>
         </div>
+
+        <div class="food-roll">
+          <img src="images/Rectangle (4).png" alt="burger">
+          <p>Beef burger with Sides</p>
+          <div class="monicon">
+            <p>$15</p>
+            <img src="images/pluss.svg" alt="plus icon">
+          </div>
+        </div>
+
+        <div class="food-roll">
+          <img src="images/Rectangle (4).png" alt="burger">
+          <p>Beef burger with Sides</p>
+          <div class="monicon">
+            <p>$15</p>
+            <img src="images/pluss.svg" alt="plus icon">
+          </div>
+        </div>
+
+
+      </div>
+
+      <div class="picture-log">
+
+        <div class="food-roll">
+          <img src="images/Rectangle (4).png" alt="burger">
+          <p>Beef burger with Sides</p>
+          <div class="monicon">
+            <p>$15</p>
+            <img src="images/pluss.svg" alt="plus icon">
+          </div>
+        </div>
+
+        <div class="food-roll">
+          <img src="images/Rectangle (4).png" alt="burger">
+          <p>Beef burger with Sides</p>
+          <div class="monicon">
+            <p>$15</p>
+            <img src="images/pluss.svg" alt="plus icon">
+          </div>
+        </div>
+
+        <div class="food-roll">
+          <img src="images/Rectangle (4).png" alt="burger">
+          <p>Beef burger with Sides</p>
+          <div class="monicon">
+            <p>$15</p>
+            <img src="images/pluss.svg" alt="plus icon">
+          </div>
+        </div>
+
 
       </div>
 
