The medical app design project was completed. All the 4 pages needs a slight modifications to counter error.

--- a/Medical App Design Project/visitfre.html
+++ b/Medical App Design Project/visitfre.html
@@ -1,7 +1,6 @@
-
-
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,7 @@
 </head>
 
 <body>
-  
+
   <div class="container">
 
     <nav>
@@ -254,14 +253,93 @@
         </div>
 
         <div class="about-doc">
-          <p> <a href="index.html" >About</a></p>
+          <p> <a href="index.html">About</a></p>
           <p> <a href="documentation.html" target="_blank">Documentation</a> </p>
           <p> <a href="documentation2.html" target="_blank" class="highlighted-about-doc">Calendar</a> </p>
           <p> <a href="visitfre.html" target="_blank">Visit Frequency</a> </p>
         </div>
+      </div> <!-- end of patient profile -->
 
-      </div>
+      <div class="calendar-details">
+        <div class="january2019">
+          <div class="january">
+            <span>January </span>
+            <div class="direction">
+              <!-- <img src="images/Group 46.svg" alt=""> -->
+              <img src="images/Polygon47.svg" alt="left-direction icon">
+              <img src="images/Polygon 48.svg" alt="right-direction-icon">
+            </div>
+          </div>          <!-- end of january -->
+          <div class="twenty19">
+            <span>2019</span>
+            <img src="images/Polygon.svg" alt="down icon">
+          </div>
+        </div>            <!-- end of january2019 -->
+        
+        <div class="calendar-grid">
+          <div class="days week">Mon</div>
+          <div class="days week">Tue</div>
+          <div class="days week">Wed</div>
+          <div class="days week">Thu</div>
+          <div class="days week">Fri</div>
+          <div class="days week opacity">Sat</div>
+          <div class="days week opacity">Sun</div>
+          <div class="days numbers opacity31">31</div>
+          <div class="days numbers">1</div>
+          <div class="days numbers">2</div>
+          <div class="days numbers"> <p class="three">3</p>
+            <p class="test">Blood test</p>
+          </div>
+          <div class="days numbers">4</div>
+          <div class="days numbers">5</div>
+          <div class="days numbers">6</div>
+          <div class="days numbers"> <p class="three">7</p>
+            <p class="test">Blood test</p>
+          </div>
+          <div class="days numbers">8</div>
+          <div class="days numbers">9</div>
+          <div class="days numbers">10</div>
+          <div class="days numbers">11</div>
+          <div class="days numbers">12</div>
+          <div class="days numbers">13</div>
+          <div class="days numbers">14</div>
+          <div class="days numbers">15</div>
+          <div class="days numbers">16</div>
+          <div class="days numbers">17</div>
+          <div class="days numbers"> 
+            <p class="three">18</p>
+            <p class="uzi test">Uzi</p>
+          </div>
+          <div class="days numbers">19</div>
+          <div class="days numbers">20</div>
+          <div class="days numbers"> 
+              <p class="three">21</p>
+              <p class="uzi test result">Uzi result</p>
+            </div>
+            <div class="days numbers">22</div>
+            <div class="days numbers"> 
+                <p class="three">23</p>
+                <p class="uzi test result dentist">Dentist</p>
+              </div>
+              <div class="days numbers">24</div>
+              <div class="days numbers">25</div>
+              <div class="days numbers">26</div>
+              <div class="days numbers">27</div>
+              <div class="days numbers last">28</div>
+              <div class="days numbers last">29</div>
+              <div class="days numbers last">30</div>
+              <div class="days numbers last">31</div>
+              <div class="days numbers last">1</div>
+              <div class="days numbers last">2</div>
+              <div class="days numbers last">3</div>
+          
+        </div>
 
-  <script src="main.js"></script>
+      </div>             <!-- end of calendar details -->
+
+
+    </main>
+    <script src="main.js"></script>
 </body>
+
 </html>
