Errors were corrected after first upload.

--- a/Medical App Design Project/index.html
+++ b/Medical App Design Project/index.html
@@ -311,7 +311,7 @@
           <div class="anxiety risk">
             <div class="anxiety-dots">
               <p>For risk diagnoses, there are no related factors since <br> we are identifying a vulnerability in a patient for a <br> potential problem; the problem is not yet present. </p>
-              <img src="images/Group 3.svg" alt="3 dots icon" id="second3dots">
+              <img src="images/Group 3.svg" alt="3 dots icon" id="secondtdots">
             </div>
             <p> 29 November, 2018 </p>
           </div>
