The patient list was made to be link and the pages were restricted to be opened on a single page.

--- a/Medical App Design Project/documentation.html
+++ b/Medical App Design Project/documentation.html
@@ -254,9 +254,9 @@
 
         <div class="about-doc">
           <p> <a href="index.html">About</a></p>
-          <p> <a href="documentation.html" target="_blank" class="highlighted-about-doc">Documentation</a> </p>
-          <p> <a href="documentation2.html" target="_blank">Calendar</a> </p>
-          <p> <a href="visitfre.html" target="_blank">Visit Frequency</a> </p>
+          <p> <a href="documentation.html" class="highlighted-about-doc">Documentation</a> </p>
+          <p> <a href="documentation2.html" >Calendar</a> </p>
+          <p> <a href="visitfre.html" >Visit Frequency</a> </p>
         </div>
 
       </div>
@@ -322,7 +322,7 @@
                   <img src="images/Polygon.svg" alt="drop-down icon">
                 </div>
 
-                <div class="details-heading hit">
+                <div class="details-heading hit last">
                     <div class="blueline"></div>
                     <div class="box"></div>
                     <p class="type">TJR</p>
