--- a/Medical App Design Project/index.html
+++ b/Medical App Design Project/index.html
@@ -252,9 +252,9 @@
 
         <div class="about-doc">
           <p> <a href="index.html" class="highlighted-about-doc">About</a></p>
-          <p> <a href="documentation.html" target="_blank">Documentation</a> </p>
-          <p> <a href="documentation2.html" target="_blank">Calendar</a> </p>
-          <p> <a href="visitfre.html" target="_blank">Visit Frequency</a> </p>
+          <p> <a href="documentation.html" >Documentation</a> </p>
+          <p> <a href="documentation2.html" >Calendar</a> </p>
+          <p> <a href="visitfre.html" >Visit Frequency</a> </p>
         </div>
 
       </div>
