--- a/Medical App Design Project/visitfre.html
+++ b/Medical App Design Project/visitfre.html
@@ -254,9 +254,9 @@
 
         <div class="about-doc">
           <p> <a href="index.html">About</a></p>
-          <p> <a href="documentation.html" target="_blank">Documentation</a> </p>
-          <p> <a href="documentation2.html" target="_blank" class="highlighted-about-doc">Calendar</a> </p>
-          <p> <a href="visitfre.html" target="_blank">Visit Frequency</a> </p>
+          <p> <a href="documentation.html" >Documentation</a> </p>
+          <p> <a href="documentation2.html" class="highlighted-about-doc">Calendar</a> </p>
+          <p> <a href="visitfre.html" >Visit Frequency</a> </p>
         </div>
       </div> <!-- end of patient profile -->
 
